Fix up broken paths

--- a/~axs/cogaff/index.html
+++ b/~axs/cogaff/index.html
@@ -37,7 +37,7 @@ Since 2011, the work has been increasingly dominated by the
 Turing-inspired Meta-Morphogenesis project
 <br/>
 <small>
-<a href="http://www.cs.bham.ac.uk/research/projects/cogaff/misc/meta-morphogenesis.html">http://www.cs.bham.ac.uk/research/projects/cogaff/misc/meta-morphogenesis.html</a>
+<a href="/cogaff/misc/meta-morphogenesis.html">http://poplogarchive.getpoplog.org/cogaff/misc/meta-morphogenesis.html</a>
 </small>
 <br/>
 A large component of this is attempting to understand how
@@ -56,13 +56,13 @@ LINKS TO NEWER DOCUMENTS
 <b>
 <UL>
 <LI>
-<a href="http://www.cs.bham.ac.uk/research/projects/cogaff#overview">High level overview of the
+<a href="/cogaff#overview">High level overview of the
 CogAff project</a>
 <LI>
-<a href="http://www.cs.bham.ac.uk/research/projects/cogaff/#people"> People involved in the
+<a href="/cogaff/#people"> People involved in the
 CogAff project.</a>
 <LI>
-<a href="http://www.cs.bham.ac.uk/research/projects/cogaff/talks/">Slide presentations(PDF)</a>
+<a href="/cogaff/talks/">Slide presentations(PDF)</a>
 <br/>
 Some on slideshare.net:
 <br/>
@@ -74,18 +74,18 @@ Publications and relatively formal research reports are available online (mainly
 in postscript and PDF format) in the Cognition and Affect Project paper
 directory.
 <LI>
-<a href="http://www.cs.bham.ac.uk/research/projects/cogaff/misc/AREADME.html">http://www.cs.bham.ac.uk/research/projects/cogaff/misc/AREADME.html</a>
+<a href="/cogaff/misc/AREADME.html">http://poplogarchive.getpoplog.org/cogaff/misc/AREADME.html</a>
 <br/>
 A large, growing, messy, collection of discussion notes in various stages of
 incompleteness ranging over a wide range of topics including vision,
 mathematics, evolution, virtual machines, architectures, causation, biology,
 development, ...
 <LI>
-<a href="http://www.cs.bham.ac.uk/research/poplog/packages/simagent.html">Software tools</a>
+<a href="/packages/simagent.html">Software tools</a>
 <br>
 SimAgent is a free, open source, toolkit for teaching and research on
 architectures for more or less intelligent systems, built on the
-<a href="http://www.cs.bham.ac.uk/research/poplog/freepoplog.html">Free Poplog system.</a>
+<a href="/freepoplog.html">Free Poplog system.</a>
 </UL>
 </b>
 <p>
@@ -241,7 +241,7 @@ research reports and seminar presentations
 in the project paper directory. There is also a
 directory with miscellaneous discussion notes and draft or
 wild papers:
-<a href="http://www.cs.bham.ac.uk/research/projects/cogaff/misc/AREADME.html">http://www.cs.bham.ac.uk/research/projects/cogaff/misc/AREADME.html</a>
+<a href="/cogaff/misc/AREADME.html">http://poplogarchive.getpoplog.org/cogaff/misc/AREADME.html</a>
 <P>
 <H2><B>
 ARCHITECTURAL LAYERS
@@ -301,15 +301,15 @@ Software Tools (SimAgent and Poplog)
 </B></H2>
 We are developing and using a flexible toolkit
 described here:
-<a href="http://www.cs.bham.ac.uk/research/poplog/packages/simagent.html">http://www.cs.bham.ac.uk/research/poplog/packages/simagent.html</a>
+<a href="/packages/simagent.html">http://poplogarchive.getpoplog.org/packages/simagent.html</a>
 This is designed so as to make it easy to explore alternative
 architectures for individual or interacting agents.
 <P>
 The toolkit is based on
-<a href="http://www.cs.bham.ac.uk/research/poplog/poplog.info.html">Poplog
+<a href="/poplog.info.html">Poplog
 Pop-11</a>.
 Poplog is available
-<a href="http://www.cs.bham.ac.uk/research/poplog/freepoplog.html"> free of charge</a>
+<a href="/freepoplog.html"> free of charge</a>
 with full system sources. It runs on a variety of platforms.
 <p>
 <HR>
@@ -322,7 +322,7 @@ provided funds for a project, to investigate <b>Evolvable
 virtual information processing architectures
 for human-like minds</b>.
 For further information on the project see
-<a href="http://www.cs.bham.ac.uk/~axs/lev/">http://www.cs.bham.ac.uk/~axs/lev/</a>
+<a href="/~axs/lev/">http://poplogarchive.getpoplog.org/~axs/lev/</a>
 <P>
 Others involved in the more general Cognition
 and Affect project are listed
@@ -365,7 +365,7 @@ which also provides pointers to related work at other sites.
 <p>
 <H2><B>POINTERS</B></H2>
 <br>
-<a href="http://www.cs.bham.ac.uk/research/projects/cogaff/misc/links.html">
+<a href="/cogaff/misc/links.html">
 Here is a list of pointers
 </a>
 to material relevant to cognitive science and AI.
@@ -382,7 +382,7 @@ General information about the School of Computer Science.</A>
 General information about the University of Birmingham.</A>
 <p>
 This file is maintained by
-<A HREF="http://www.cs.bham.ac.uk/~axs">Aaron Sloman,</A>
+<A HREF="http://poplogarchive.getpoplog.org/~axs">Aaron Sloman,</A>
 and designed to be <a href="http://lynx.browser.org">lynx-friendly</a>,
 and
 <a href="http://www.anybrowser.org/campaign/">viewable with any browser</a>.
